@@ -1,5 +1,9 @@
 2007-12-13  Neal H. Walfield  <neal@gnu.org>
 
+	* exceptions.c (exception_page_cleanup): Remove debugging cruft.
+	
+2007-12-13  Neal H. Walfield  <neal@gnu.org>
+
 	* exceptions.c (exception_frame_alloc): When allocating the first
 	frame, set EXCEPTION_PAGE->EXCEPTION_STACK_BOTTOM.
 	(exception_page_cleanup): New function.
